--- a/20201112_Anatomie_Seminar.tex
+++ b/20201112_Anatomie_Seminar.tex
@@ -5,10 +5,11 @@
 \usetheme{UniBern}
 
 \title{How to study the internals of +100 human teeth with X-ray microtomography}
+\subtitle{subtitle}
 \author{David Haberthür}
 \date{November 12, 2020 | Internal seminar at the Institute of Anatomy}
 
-\includeonlyframes{current}
+%\includeonlyframes{current}
 %then....
 %\begin{frame}[label=current]
 %\end{frame}
@@ -27,7 +28,8 @@
 	maxnames=1,
 	sorting=none
 	]{biblatex}
-\addbibresource{~/P/Documents/library.bib}
+%\addbibresource{~/P/Documents/library.bib}
+\addbibresource{~/Documents/library.bib}
 \usepackage{ccicons}
 \usepackage{animate}
 \usepackage{tikz}
@@ -36,7 +38,7 @@
 \usepackage{shadowtext}  % for the shadowed scalebar
 	\shadowoffset{1pt}
 	\shadowcolor{ubRed}
-\usepackage[absolute,overlay]{textpos} %for the \source{} command	
+\usepackage[absolute,overlay]{textpos} %for the \source* command	
 \usepackage{fontawesome5}
 \usepackage{standalone}
 \usepackage[version=4]{mhchem}
@@ -44,17 +46,7 @@
 	\lstset{frame=single,
 	basicstyle=\tiny\ttfamily
 	}
-
-%\usepackage{pgfplots}
-%	\pgfplotsset{compat=newest}
-	
 \usepackage{microtype}
-
-
-%\usepackage{csquotes}
-%\usepackage{pgfplotstable}
-%\usepackage{booktabs}
-%\usepackage{colortbl}
 
 % Some often used abbreviations/commands
 \newcommand{\everyframe}{111} % use only every nth frame for the animations
@@ -208,7 +200,7 @@
 		\begin{column}{0.6\linewidth}
 			\centering
 			\only<1-2>{%
-				\includegraphics[height=0.618\textheight]{./images/Sagittal_brain_MRI}
+				\includegraphics[height=\imheight]{./images/Sagittal_brain_MRI}
 				\source{w.wiki/7g4}{\ccbysa}
 			}
 			\only<3>{%
@@ -234,7 +226,7 @@
 \begin{frame}
 	\frametitle{CT-Scanner}
 	\centering
-	\animategraphics[loop,autoplay,height=0.618\textheight,every=\everyframe]{24}{./movies/ct-scanner/ct-scanner0}{001}{480}%
+	\animategraphics[loop,autoplay,height=\imheight,every=\everyframe]{24}{./movies/ct-scanner/ct-scanner0}{001}{480}%
 	\source{youtu.be/2CWpZKuy-NE}{}%
 	\note{From \href{https://www.bruker.com/products/microtomography/micro-ct-for-sample-scanning/x-ray-micro-ct-microtomography.html}:
 		Micro computed tomography or micro-CT is x-ray imaging in 3D, by the same method used in hospital CT (or CAT) scans, but on a small scale with massively increased resolution.
@@ -243,7 +235,7 @@
 \end{frame}
 
 \renewcommand{\imwidth}{\columnwidth}
-\begin{frame}[label=currentsadfasd]
+\begin{frame}
 	\frametitle{Why \uct?}
 	\begin{columns}
 		\begin{column}{0.49\linewidth}
@@ -440,7 +432,7 @@
 \begin{frame}
 	\frametitle{What is happening?}
 	\centering
-	\includegraphics[height=0.618\textheight]{./images/3D_Computed_Tomography}
+	\includegraphics[height=\imheight]{./images/3D_Computed_Tomography}
 	\source{w.wiki/7g3}{\ccbysa}
 \end{frame}
 
@@ -509,16 +501,16 @@
 	\animategraphics[autoplay,loop,height=\imheight,every=\everyframe]{24}{./movies/scan/projections/KP-TNIKWT02_240_projections_of_940_800_px_}{000}{313}
 \end{frame}
 
-\begin{frame}
-	\frametitle{Projections}
-	\begin{itemize}
-		\item A (micro-focus) x-ray source illuminates the object
-		\item The x-rays penetrate the sample and are attenuated
-		\item A scintillator converts the x-rays to visible light
-		\item A (planar) x-ray detector collects (magnified) projection images.
-		\item The projections are recorded on disk
-	\end{itemize}
-\end{frame}
+%\begin{frame}
+%	\frametitle{Projections}
+%	\begin{itemize}
+%		\item A (micro-focus) x-ray source illuminates the object
+%		\item The x-rays penetrate the sample and are attenuated
+%		\item A scintillator converts the x-rays to visible light
+%		\item A (planar) x-ray detector collects (magnified) projection images.
+%		\item The projections are recorded on disk
+%	\end{itemize}
+%\end{frame}
 
 \begin{frame}
 	\frametitle{Reconstructions}
@@ -527,17 +519,17 @@
 	\animategraphics[autoplay,palindrome,height=\imheight,every=\everyframe]{24}{./movies/scan/reconstructions/KP-TNIKWT02_240_reconstructions_of_556_800_px_}{000}{277}
 \end{frame}
 
-\begin{frame}
-	\frametitle{Reconstructions}
-	\begin{itemize}
-		\item Based on hundreds of angular views acquired while the object rotates, a computer synthesizes a stack of virtual cross section slices through the object.
-		\item Radon Transformation
-		\item Filtered back projection
-		\item Fan beam reconstruction
-		\item Corrections (beam hardening, etc.)
-		\item Writing to stack
-	\end{itemize}
-\end{frame}
+%\begin{frame}
+%	\frametitle{Reconstructions}
+%	\begin{itemize}
+%		\item Based on hundreds of angular views acquired while the object rotates, a computer synthesizes a stack of virtual cross section slices through the object.
+%		\item Radon Transformation
+%		\item Filtered back projection
+%		\item Fan beam reconstruction
+%		\item Corrections (beam hardening, etc.)
+%		\item Writing to stack
+%	\end{itemize}
+%\end{frame}
 
 \begin{frame}
 	\frametitle{Visualization}
@@ -548,12 +540,12 @@
 	\end{tikzpicture}%
 \end{frame}
 
-\begin{frame}
-	\frametitle{Visualization}
-	\begin{itemize}
-		\item Based on the reconstructions the computer synthesizes a three-dimensional view of the scanned sample
-	\end{itemize}
-\end{frame}
+%\begin{frame}
+%	\frametitle{Visualization}
+%	\begin{itemize}
+%		\item Based on the reconstructions the computer synthesizes a three-dimensional view of the scanned sample
+%	\end{itemize}
+%\end{frame}
 
 \section{What about those teeth?}
 \begin{frame}
@@ -591,22 +583,22 @@
 					\item<5-> Foramen geometry and size, according to~\citeauthor{Wolf2017}~\cite{Wolf2017}
 				\end{itemize}
 				
-				\item<6> \emph{Reproducible} analysis~\cite{Haberthur2020a}, you can click a button to redo it yourself
+				\item<6-> \emph{Reproducible} analysis~\cite{Haberthur2020a}~\onslide<7>{, \eg can \href{https://mybinder.org/v2/gh/habi/zmk-tooth-cohort/master?filepath=ToothAnalysis.ipynb}{click a button to double-check} or \href{https://nbviewer.jupyter.org/github/habi/zmk-tooth-cohort/blob/master/ToothAnalysis.ipynb}{view it yourself}}
 			\end{itemize}
 		\end{column}
 		\begin{column}{0.49\linewidth}
 			\only<1>{%
 				\centering
-				\includegraphics[height=.7\textheight]{./images/bucketofteeth}%
+				\includegraphics[height=\imheight]{./images/bucketofteeth}%
 				}%
 			\only<2>{%
-				\lstinputlisting[linerange={2-5,17-17,19-23,29-31,34-34,38-40,51-51,58-59}]{./logfiles/Tooth045.log}%
+				\lstinputlisting[linerange={2-4,15-15,17-19,28-30,36-37,40-40,44-44,53-54}]{./logfiles/Tooth045.log}%
 				}%
 			\only<3>{%
+				Scanned teeth with the \emph{sample changer} on the SkyScan 1272
 				In total:
 				\begin{itemize}
-					\item Sample changer
-					\item 13 days of \uct scanning
+					\item 13 days of \emph{continuous} \uct scanning
 					\item \SI{819}{\giga\byte} of raw data\newline\num{230648} TIFF projections
 					\item \SI{326}{\giga\byte} of raw data\newline\num{282062} PNG reconstructions
 				\end{itemize}					
@@ -631,8 +623,8 @@
 \begin{frame}[label=current]
 	\frametitle{\uct imaging}
 	\centering
-	\includegraphics<1>[height=0.7\textheight]{./images/{{ScanOverviews.104}}}%
-	\includegraphics<2>[height=0.7\textheight]{./images/{{ScanOverviews.24}}}%
+	\includegraphics<1>[height=\imheight]{./images/{{ScanOverviews.104}}}%
+	\includegraphics<2>[height=\imheight]{./images/{{ScanOverviews.24}}}%
 \end{frame}	
 	
 \subsection{Image processing}
@@ -687,9 +679,12 @@
 	\frametitle{Detection of enamel-dentin border}
 	\centering
 	\only<1>{%
-		\includegraphics[height=0.7\textheight]{./images/tooth045/{{Tooth045.ExtractedSlices}}}%
+		\includegraphics[height=\imheight]{./images/briseno}%
 		}
 	\only<2>{%
+		\includegraphics[height=\imheight]{./images/tooth045/{{Tooth045.ExtractedSlices}}}%
+		}
+	\only<3>{%
 		\includegraphics[width=\linewidth]{./images/tooth045/{{Tooth045.Briseno}}}%
 		}
 \end{frame}
@@ -708,10 +703,13 @@
 	\frametitle{Analysis of the physiological foramen geometry}
 	\centering
 	\only<1>{%
-		\animategraphics[palindrome,autoplay,height=0.7\textheight,every=\everyframe]{24}{./movies/tooth045/edt-axial/Tooth045_EDT_Axial_}{100}{199}%
+		\includegraphics[height=\imheight]{./images/foramen}%
 		}%
 	\only<2>{%
-		\animategraphics[palindrome,autoplay,height=0.7\textheight,every=\everyframe]{24}{./movies/tooth045/edt-coronal/Tooth045_EDT_Coronal_}{123}{213}%
+		\animategraphics[palindrome,autoplay,height=\imheight,every=\everyframe]{24}{./movies/tooth045/edt-axial/Tooth045_EDT_Axial_}{100}{199}%
+		}%
+	\only<3>{%
+		\animategraphics[palindrome,autoplay,height=\imheight,every=\everyframe]{24}{./movies/tooth045/edt-coronal/Tooth045_EDT_Coronal_}{123}{213}%
 		}		
 \end{frame}
 
@@ -735,13 +733,13 @@
 		\end{column}
 		\begin{column}{0.5\linewidth}
 			\centering
-			\includegraphics<1->[height=.7\textheight]{./images/team}
+			\includegraphics<1->[height=\imheight]{./images/team}
 		\end{column}
 	\end{columns}
 	\only<4>{%
 		\begin{tikzpicture}[remember picture,overlay]%
 			\node at (current page.center){%
-				\animategraphics[loop,autoplay,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/pulpa-slices/image0}{000}{476}%
+				\animategraphics[loop,autoplay,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/full-slices/image0}{000}{466}%
 				};%
 		\end{tikzpicture}%
 	}%
@@ -752,7 +750,7 @@
 	\begin{itemize}
 		\item This \textsc{beamer} presentation was crafted in \LaTeX\xspace with the (slightly adapted) \href{http://intern.unibe.ch/dienstleistungen/corporate_design_und_vorlagen/praesentationen/index_ger.html}{template from \emph{Corporate Design und Vorlagen} of the University of Bern}.
 		\begin{itemize}
-			\item \href{https://github.com/habi/20201112_Anatomie_Seminar}{Fullly reproducible source: git.io/JkJ5w}
+			\item \href{https://github.com/habi/20201112_Anatomie_Seminar}{Fully reproducible source: git.io/JkJ5w}
 %			\item The \LaTeX\xspace code is automatically compiled with a \href{https://github.com/actions}{GitHub action}\footnote{Details on how this works are specified in a \href{https://github.com/habi/latex-test/}{small test repository here: git.io/JeOOj}} to a \href{https://habi.github.io/Lecture.Microtomography/XRayMicroTomography.Handout.pdf}{(handout) PDF which you can access here: git.io/JeQxO}
 		\end{itemize}
 		\item Did you spot an error?
@@ -767,8 +765,8 @@
 \begin{frame}[label=current]
 	\frametitle{References}
 	% Make the references continuously smaller :)
-	\renewcommand*{\bibfont}{\small}
-	%\renewcommand*{\bibfont}{\footnotesize}
+	%\renewcommand*{\bibfont}{\small}
+	\renewcommand*{\bibfont}{\footnotesize}
 	%\renewcommand*{\bibfont}{\scriptsize}
 	%\renewcommand*{\bibfont}{\tiny}
 	\setbeamertemplate{bibliography item}{\insertbiblabel}
