Binder link in image and placement tweaks

--- a/20201112_Anatomie_Seminar.tex
+++ b/20201112_Anatomie_Seminar.tex
@@ -613,6 +613,10 @@
 				\animategraphics[loop,autoplay,width=\linewidth,every=\everyframe]{24}{./movies/coder/coder-}{0}{133}%
 				\source{gph.is/2nqkple}{}%
 				}%
+			\only<7>{%
+				\centering
+				\href{https://mybinder.org/v2/gh/habi/zmk-tooth-cohort/master?filepath=ToothAnalysis.ipynb}{\includegraphics[height=\imheight]{./images/binder}}%
+				}%
 		\end{column}
 	\end{columns}
 \end{frame}
@@ -631,8 +635,8 @@
 	\begin{columns}
 		\begin{column}{0.309\linewidth}	
 			\begin{itemize}
-				\item<1-> Full datasets: \SI{326}{\giga\byte}
-				\item<2-> Cropped: \SI{115}{\giga\byte}
+				\item Full datasets: \SI{326}{\giga\byte}
+				\item \uncover<2->{Cropped: \SI{115}{\giga\byte}}
 			\end{itemize}
 		\end{column}	
 		\begin{column}{0.618\linewidth}
