Binder link in image

--- a/20201112_Anatomie_Seminar.tex
+++ b/20201112_Anatomie_Seminar.tex
@@ -613,6 +613,9 @@
 				\animategraphics[loop,autoplay,width=\linewidth,every=\everyframe]{24}{./movies/coder/coder-}{0}{133}%
 				\source{gph.is/2nqkple}{}%
 				}%
+			\only<7>{%
+				\href{https://mybinder.org/v2/gh/habi/zmk-tooth-cohort/master?filepath=ToothAnalysis.ipynb}\includegraphics[height=\imheight]{./images/binder.png}}
+				}%
 		\end{column}
 	\end{columns}
 \end{frame}
