Fix animations (fish size)

--- a/20201112_Anatomie_Seminar.tex
+++ b/20201112_Anatomie_Seminar.tex
@@ -32,6 +32,7 @@
 \addbibresource{~/Documents/library.bib}
 \usepackage{ccicons}
 \usepackage{animate}
+\usepackage{standalone} % for CT animations
 \usepackage{tikz}
 	\usetikzlibrary{spy}
 	\tikzset{shadowed/.style={preaction={transform canvas={shift={(1pt,-1pt)}},draw=ubRed}}}
