--- a/20201112_Anatomie_Seminar.tex
+++ b/20201112_Anatomie_Seminar.tex
@@ -1,11 +1,10 @@
 % Compile with:
 % latexmk -pdf -pvc -interaction=nonstopmode
 %\documentclass[aspectratio=169,draft]{beamer}
-\documentclass[aspectratio=169]{beamer}
+\documentclass[aspectratio=169,draft]{beamer}
 \usetheme{UniBern}
 
 \title{How to study the internals of +100 human teeth with X-ray microtomography}
-\subtitle{subtitle}
 \author{David Haberthür}
 \date{November 12, 2020 | Internal seminar at the Institute of Anatomy}
 
@@ -21,7 +20,7 @@
 	per-mode=symbol,
 	per-symbol=/]{siunitx}
 \usepackage{xspace}
-\usepackage[missing=main]{gitinfo2} % GitHub Actions don't pull in the commit hash, so we just show `Master'
+\usepackage[missing=main]{gitinfo2} % GitHub Actions don't pull in the commit hash, so we just show the main branch as placeholder
 \usepackage[backend=biber,
 	style=numeric,
 	url=false,
@@ -50,7 +49,7 @@
 \usepackage{microtype}
 
 % Some often used abbreviations/commands
-\newcommand{\everyframe}{1} % use only every nth frame for the animations
+\newcommand{\everyframe}{111} % use only every nth frame for the animations
 \newcommand{\imwidth}{\linewidth}% set global image width
 \newcommand{\imheight}{0.618\paperheight}% set global image height
 \newlength\imagewidth% needed for scalebars
@@ -166,22 +165,21 @@
 \begin{frame}
 	\frametitle{Grüessech!}
 	\begin{itemize}
-		\item Office \href{http://osm.org/go/0CZwlGp3A?m}{B311} | \href{mailto:haberthuer@ana.unibe.ch?subject=Feedback\%20from\%20the\%20(micro)-tomography\%20lecture}{haberthuer@ana.unibe.ch}
-		\item Physicist by trade
+		\item David
 		\begin{itemize}
+			\item Physicist by trade
 			\item \href{https://boris.unibe.ch/2619/}{PhD in high resolution imaging of the lung}
 			\item Post-Doc I: \href{https://www.psi.ch/sls/tomcat/}{TOMCAT}, \href{https://www.psi.ch/sls/}{Swiss Light Source}, \href{https://www.psi.ch/}{Paul Scherrer Institute}
-			\item Post-Doc II: \uct-group, \href{https://ana.unibe.ch}{Institute of Anatomy} (Ruslan Hlushchuk, David Haberthür, Oleksiy-Zakhar Khoma and Tim Hoessly)
+			\item Post-Doc II: \uct-group, Topographic and clinical Anatomy with Ruslan Hlushchuk, Oleksiy-Zakhar Khoma and Tim Hoessly
 		\end{itemize}
 		\item Biomedical imaging and research
 		\begin{itemize}
 			\item microangioCT~\cite{Hlushchuk2018}: Tumor vasculature, angiogenesis in the heart, musculature and bones
-			\item Cancer research: Melanoma \& lung tumors
 			\item Physiology: Zebrafish musculature and gills~\cite{MesserliAaldijk2020}			
 			\item Computer science: Automate \emph{all} the things~\cite{Haberthur2020}
 			\item Lung tumor detection and classification
 		\end{itemize}
-	\item<1-> SkyScan 1172 \& 1272 \uncover<2->{\& 2214}							
+	%\item<1-> SkyScan 1172 \& 1272 \uncover<2->{\& 2214}							
 	\end{itemize}
 \end{frame}
 
@@ -190,7 +188,7 @@
 	\tableofcontents
 \end{frame}
 
-\section{Biomedical imaging}
+\section{Overview}
 \begin{frame}
 	\frametitle{Biomedical imaging}
 	\begin{columns}
@@ -237,6 +235,7 @@
 		No sample preparation, no staining, no thin slicing - a single scan will image your sample's complete internal 3D structure at high resolution, plus you get your intact sample back at the end!}
 \end{frame}
 
+\section{Why \uct?}
 \renewcommand{\imwidth}{\columnwidth}
 \begin{frame}
 	\frametitle{Why \uct?}
@@ -365,12 +364,20 @@
 			}%
 		\end{column}
 	\end{columns}
+\note{The human head scan was downloaded from the \href{https://www.cancerimagingarchive.net}{[Cancer Imaging Archive}{Cancer Imaging Archive}.
+	We loaded the DICOM slices in Fiji, resliced it to show it from the side and then used to generate an MIP.
+	According to the DICOM tags, the voxel size is \SI{0.4883x0.4883x0.625}{\milli\meter\cubed}, the image size is 512\(\times\)512 pixels.
+	The mouse head is the same as shown in the early animation.
+	The files from the early animation are resized 0.25 times, so we used the original dataset (Mouse1265\_Skull\_Gaby\_TKI\_7\_96um\_Al05\_2K) for a reslice and the generation of the MIP.
+	The voxel size of the original data is 7.96 um, the image size is 3295\(\times\)1492 pixels, e.g. 26.32 mm.
+	}
 \end{frame}
 
+\frametitle{Computed tomography}
 \begin{frame}
 	\frametitle{Machinery}
 	\begin{columns}
-		\begin{column}{0.4\linewidth}
+		\begin{column}{0.39\linewidth}
 			\begin{itemize}
 				\item<1-> Hospital CT
 				\begin{itemize}
@@ -399,14 +406,9 @@
 		\end{column}
 	\end{columns}
 \end{frame}
-\note{FAN BEAM -> BRUKER\newline
-	PARALLEL BEAM -> TOMCAT\newline
-	HELICAL/SPIRAL CT\newline
-	MULTISLICE CT -> HOSPITAL
-}
 
 \begin{frame}
-	\frametitle{Machinery}
+	\frametitle{Computed tomography}
 	No matter what kind of machine, the basic principle is always the same
 	\begin{itemize}
 		\item an x-ray source
@@ -416,7 +418,7 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Machinery}
+	\frametitle{Computed tomography}
 	\begin{columns}
 		\begin{column}{0.49\linewidth}
 			\centering
@@ -438,6 +440,7 @@
 %	\source{w.wiki/7g3}{\ccbysa}
 %\end{frame}
 
+\section{Examples}
 \begin{frame}
 	\frametitle{Examples}
 	\centering
@@ -494,7 +497,7 @@
 	}
 \end{frame}
 
-\renewcommand{\imwidth}{0.49\linewidth}
+\section{A scan, from start to finish}
 \begin{frame}
 	\frametitle{Projections}
 	\centering
@@ -560,11 +563,12 @@
 
 \begin{frame}
 	\frametitle{Internal morphology of human teeth}
+	Collaboration with ZMK
 	\begin{itemize}
 		\item Numbers instead of just pretty images
 		\item Segmentation
-		\item Characterization
-		\item Reproducible and automated image analysis with Jupyter~\cite{Kluyver2016}
+		\item (Unbiased) Characterization
+		\item Reproducible and automated image analysis (\href{https://www.python.org/}{\faPython} in \href{https://jupyter.org/}{Jupyter}~\cite{Kluyver2016})
 	\end{itemize}
 \end{frame}
 
@@ -575,14 +579,14 @@
 	\begin{columns}
 		\begin{column}{0.49\linewidth}
 			\begin{itemize}
-				\item<1-> 104 extracted human permanent mandibular canines, stored in \SI{70}{\percent} ethanol
+				\item<1-> 104 extracted human permanent mandibular canines
 				\item<2-> \uct imaging
 				\item<4-> Morphology
 				\begin{itemize}
 					\item<4-> Root canal  morphology, according to~\citeauthor{Briseno-Marroquin2015}~\cite{Briseno-Marroquin2015}
 					\item<5-> Foramen geometry and size, according to~\citeauthor{Wolf2017}~\cite{Wolf2017}
 				\end{itemize}		
-				\item<6-> \emph{Reproducible} analysis~\cite{Haberthur2020a}~\onslide<7>{, \eg can \href{https://mybinder.org/v2/gh/habi/zmk-tooth-cohort/master?filepath=ToothAnalysis.ipynb}{click a button to double-check} or \href{https://nbviewer.jupyter.org/github/habi/zmk-tooth-cohort/blob/master/ToothAnalysis.ipynb}{view it yourself}}
+				\item<6-> \emph{Reproducible} analysis~\cite{Haberthur2020a}\onslide<7>{, \eg you can \href{https://mybinder.org/v2/gh/habi/zmk-tooth-cohort/master?filepath=ToothAnalysis.ipynb}{click a button to double-check} or \href{https://nbviewer.jupyter.org/github/habi/zmk-tooth-cohort/blob/master/ToothAnalysis.ipynb}{view it yourself}}
 			\end{itemize}
 		\end{column}
 		\begin{column}{0.49\linewidth}
@@ -594,12 +598,12 @@
 				\lstinputlisting[linerange={2-4,15-15,17-19,28-30,36-37,40-40,44-44,53-54}]{./logfiles/Tooth045.log}%
 				}%
 			\only<3>{%
-				Scanned teeth with the \emph{sample changer} on the SkyScan 1272
+				\emph{Sample changer} on the SkyScan 1272\newline
 				In total:
 				\begin{itemize}
 					\item 13 days of \emph{continuous} \uct scanning
 					\item \SI{819}{\giga\byte} of raw data\newline\num{230648} TIFF projections
-					\item \SI{326}{\giga\byte} of raw data\newline\num{282062} PNG reconstructions
+					\item \SI{326}{\giga\byte} data as input for analysis\newline\num{282062} PNG reconstructions
 				\end{itemize}					
 					}%		
 			\only<4>{%
@@ -719,6 +723,17 @@
 		}		
 \end{frame}
 
+\section{\emph{Take to lunch}-message}
+\begin{frame}
+	\frametitle{Conclusion}
+	\begin{itemize}
+		\item Efficient use of time
+		\item Reproducible analysis with \emph{free and open-source software}
+		\item Objective analysis, \eg no operator bias
+		\item More teeth does not mean more (analysis) work
+	\end{itemize}
+\end{frame}
+
 \begin{frame}
 	\frametitle{Thanks!}
 	\begin{columns}
@@ -752,31 +767,31 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{\href{https://en.wikipedia.org/wiki/Colophon_(publishing)}{Colophon}}
-	\begin{itemize}
-		\item This \textsc{beamer} presentation was crafted in \LaTeX\xspace with the (slightly adapted) \href{http://intern.unibe.ch/dienstleistungen/corporate_design_und_vorlagen/praesentationen/index_ger.html}{template from \emph{Corporate Design und Vorlagen} of the University of Bern}.
-		\begin{itemize}
-			\item \href{https://github.com/habi/20201112_Anatomie_Seminar}{Fully reproducible source: git.io/JkJ5w}
-%			\item The \LaTeX\xspace code is automatically compiled with a \href{https://github.com/actions}{GitHub action}\footnote{Details on how this works are specified in a \href{https://github.com/habi/latex-test/}{small test repository here: git.io/JeOOj}} to a \href{https://habi.github.io/Lecture.Microtomography/XRayMicroTomography.Handout.pdf}{(handout) PDF which you can access here: git.io/JeQxO}
-		\end{itemize}
-		\item Did you spot an error?
-		\begin{itemize}
-			\item \href{https://github.com/habi/20201112_Anatomie_Seminar/issues}{File an issue: git.io/JkJ5K}
-%			\item \href{https://github.com/habi/lecture.microtomography/pulls}{Submit a pull request: git.io/fjpPN}
-			\item \href{mailto:haberthuer@ana.unibe.ch?subject=Error\%20in\%20the\%20seminar\%20presentation\&body=https://xkcd.com/386/}{Send me an email: haberthuer@ana.unibe.ch}
-		\end{itemize}
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{References}
-	% Make the references continuously smaller :)
-	%\renewcommand*{\bibfont}{\small}
-	%\renewcommand*{\bibfont}{\footnotesize}
-	\renewcommand*{\bibfont}{\scriptsize}
-	%\renewcommand*{\bibfont}{\tiny}
-	\setbeamertemplate{bibliography item}{\insertbiblabel}
-	\printbibliography
+	\frametitle{References \& \href{https://en.wikipedia.org/wiki/Colophon_(publishing)}{Colophon}}
+	\begin{columns}
+		\begin{column}{0.6\linewidth}
+			% Make the references continuously smaller :)
+			%\renewcommand*{\bibfont}{\small}
+			%\renewcommand*{\bibfont}{\footnotesize}
+			%\renewcommand*{\bibfont}{\scriptsize}
+			\renewcommand*{\bibfont}{\tiny}
+			\setbeamertemplate{bibliography item}{\insertbiblabel}
+			\printbibliography
+		\end{column}	
+		\begin{column}{0.4\linewidth}
+			\begin{itemize}
+				\item This \textsc{beamer} presentation was crafted in \LaTeX\xspace with the (slightly adapted) \href{http://intern.unibe.ch/dienstleistungen/corporate_design_und_vorlagen/praesentationen/index_ger.html}{template from \emph{Corporate Design und Vorlagen} of the University of Bern}.
+				\begin{itemize}
+					\item \href{https://github.com/habi/20201112_Anatomie_Seminar}{Fully reproducible source: git.io/JkJ5w}
+				\end{itemize}
+				\item Did you spot an error?
+				\begin{itemize}
+					\item \href{https://github.com/habi/20201112_Anatomie_Seminar/issues}{File an issue: git.io/JkJ5K}
+					\item \href{mailto:haberthuer@ana.unibe.ch?subject=Error\%20in\%20the\%20seminar\%20presentation\&body=https://xkcd.com/386/}{Send me an email: haberthuer@ana.unibe.ch}
+				\end{itemize}
+			\end{itemize}
+		\end{column}
+	\end{columns}
 \end{frame}
 
 \end{document}
