Correct section levels

--- a/20201112_Anatomie_Seminar.tex
+++ b/20201112_Anatomie_Seminar.tex
@@ -235,7 +235,7 @@
 		No sample preparation, no staining, no thin slicing - a single scan will image your sample's complete internal 3D structure at high resolution, plus you get your intact sample back at the end!}
 \end{frame}
 
-\section{Why \uct?}
+\subsection{Why \uct?}
 \renewcommand{\imwidth}{\columnwidth}
 \begin{frame}
 	\frametitle{Why \uct?}
@@ -440,7 +440,7 @@
 %	\source{w.wiki/7g3}{\ccbysa}
 %\end{frame}
 
-\section{Examples}
+\subsection{Examples}
 \begin{frame}
 	\frametitle{Examples}
 	\centering
@@ -497,7 +497,7 @@
 	}
 \end{frame}
 
-\section{A scan, from start to finish}
+\subsection{A \uct scan, from start to finish}
 \begin{frame}
 	\frametitle{Projections}
 	\centering
@@ -561,6 +561,7 @@
 	\end{tikzpicture}%
 \end{frame}
 
+\subsection{Overview}
 \begin{frame}
 	\frametitle{Internal morphology of human teeth}
 	Collaboration with ZMK
@@ -572,7 +573,6 @@
 	\end{itemize}
 \end{frame}
 
-\subsection{Protocol}
 \renewcommand{\imwidth}{\columnwidth}
 \begin{frame}
 	\frametitle{How?}
