--- a/20210902_ToScA.tex
+++ b/20210902_ToScA.tex
@@ -4,9 +4,9 @@
 \documentclass[aspectratio=169]{beamer}
 \usetheme{UniBern}
 
-\title{How to study the internals of +100 human teeth with X-ray microtomography}
+\title{Automated segmentation and description of the internal morphology of human permanent teeth by means of micro-CT}
 \author{David Haberthür}
-\date{November 12, 2020 | Internal seminar at the Institute of Anatomy}
+\date{September 2, 2021 | ToScA UK \& Europe 2021}
 
 %\includeonlyframes{current}
 %then....
@@ -28,7 +28,7 @@
 	sorting=none
 	]{biblatex}
 %\addbibresource{~/P/Documents/library.bib}
-\addbibresource{~/Documents/library.bib}
+\addbibresource{../../Documents/library.bib}
 \usepackage{ccicons}
 \usepackage{animate}
 \usepackage{standalone} % for CT animations
@@ -49,7 +49,7 @@
 \usepackage{microtype}
 
 % Some often used abbreviations/commands
-\newcommand{\everyframe}{1} % use only every nth frame for the animations
+\newcommand{\everyframe}{10} % use only every nth frame for the animations
 \newcommand{\imwidth}{\linewidth}% set global image width
 \newcommand{\imheight}{0.618\paperheight}% set global image height
 \newlength\imagewidth% needed for scalebars
@@ -162,78 +162,45 @@
 	\end{frame}%
 }
 
-\begin{frame}
+\begin{frame}[label=current]
 	\frametitle{Grüessech!}
 	\begin{itemize}
-		\item David
+		\item David Haberthür
 		\begin{itemize}
 			\item Physicist by trade
 			\item \href{https://boris.unibe.ch/2619/}{PhD in high resolution imaging of the lung}
 			\item Post-Doc I: \href{https://www.psi.ch/sls/tomcat/}{TOMCAT}, \href{https://www.psi.ch/sls/}{Swiss Light Source}, \href{https://www.psi.ch/}{Paul Scherrer Institute}
 			\item Post-Doc II: \uct-group, Topographic and clinical Anatomy with Ruslan Hlushchuk, Oleksiy-Zakhar Khoma and Tim Hoessly
 		\end{itemize}
-		\item Biomedical imaging and research
-		\begin{itemize}
-			\item microangioCT~\cite{Hlushchuk2018}: Tumor vasculature, angiogenesis in the heart, musculature and bones
-			\item Physiology: Zebrafish musculature and gills~\cite{MesserliAaldijk2020}			
-			\item Computer science: Automate \emph{all} the things~\cite{Haberthur2020}
-			\item Lung tumor detection and classification
-		\end{itemize}
-	%\item<1-> SkyScan 1172 \& 1272 \uncover<2->{\& 2214}							
-	\end{itemize}
+	\end{itemize}		
 \end{frame}
 
-\begin{frame}
-	\frametitle{Contents}
-	\tableofcontents
-\end{frame}
-
-\section{Overview}
-\begin{frame}
-	\frametitle{Biomedical imaging}
+\begin{frame}[label=current]
+	\frametitle{Grüessech!}		
 	\begin{columns}
-		\begin{column}{0.4\linewidth}
+		\begin{column}{0.49\linewidth}	
+		\begin{itemize}		
+			\item Biomedical imaging and research
 			\begin{itemize}
-				\item<1->Medical research
-				\item<1->Non-destructive insights into the samples
-				\item<2->(Small) Biological samples
+				\item microangioCT~\cite{Hlushchuk2018}: Tumor vasculature, angiogenesis in the heart, musculature and bones
+				\item Physiology: Zebrafish musculature and gills~\cite{MesserliAaldijk2020}			
+				\item Computer science: Automate \emph{all} the things~\cite{Haberthur2020}
+				\item Lung tumor detection and classification
 			\end{itemize}
+		\end{itemize}				
 		\end{column}
-		\begin{column}{0.6\linewidth}
+		\begin{column}{0.49\linewidth}
 			\centering
-			\only<1-2>{%
-				\includegraphics[height=\imheight]{./images/Sagittal_brain_MRI}
-				\source{w.wiki/7g4}{\ccbysa}
-			}
-			\only<3>{%
-				\begin{tikzpicture}[remember picture,overlay]%
-					\node at (current page.center){%
-						\animategraphics[loop,autoplay,width=\paperwidth,every=\everyframe]{24}{./movies/mouse_skull/mouse_skull}{000}{236}%
-					};%
-				\end{tikzpicture}%
-			}
+			\includegraphics<1>[height=\imheight]{./images/1172}%
+			\only<1>{\source{brukersupport.com}{}}
+			\includegraphics<2>[width=\imwidth]{./images/1272}%
+			\only<2>{\source{bruker.com/skyscan1272}{}}
+			\includegraphics<3>[width=\imwidth]{./images/2214}%
+			\only<3>{\source{bruker.com/skyscan2214}{}}
 		\end{column}
 	\end{columns}
 \end{frame}
-	
-\section{(micro)Tomography}
-\begin{frame}
-	\frametitle{Scale}
-	\centering
-	\includegraphics[height=\imheight]{./images/AnatomySeminarYuryBelyaev-cropped}%
-	\sourcelink{www.mic.unibe.ch/organisation.php}{Yury Belyaev, MIC}{slide from internal seminar presentation}
-\end{frame}
 
-\begin{frame}
-	\frametitle{CT-Scanner}
-	\centering
-	\animategraphics[loop,autoplay,height=\imheight,every=\everyframe]{24}{./movies/ct-scanner/ct-scanner0}{001}{480}%
-	\source{youtu.be/2CWpZKuy-NE}{}%
-	\note{From \href{https://www.bruker.com/products/microtomography/micro-ct-for-sample-scanning/x-ray-micro-ct-microtomography.html}:
-		Micro computed tomography or micro-CT is x-ray imaging in 3D, by the same method used in hospital CT (or CAT) scans, but on a small scale with massively increased resolution.
-		It really represents 3D microscopy, where very fine scale internal structure of objects is imaged non-destructively.
-		No sample preparation, no staining, no thin slicing - a single scan will image your sample's complete internal 3D structure at high resolution, plus you get your intact sample back at the end!}
-\end{frame}
 
 \subsection{Why \uct?}
 \renewcommand{\imwidth}{\columnwidth}
@@ -372,73 +339,6 @@
 	The voxel size of the original data is 7.96 um, the image size is 3295\(\times\)1492 pixels, e.g. 26.32 mm.
 	}
 \end{frame}
-
-\frametitle{Computed tomography}
-\begin{frame}
-	\frametitle{Machinery}
-	\begin{columns}
-		\begin{column}{0.39\linewidth}
-			\begin{itemize}
-				\item<1-> Hospital CT
-				\begin{itemize}
-					\item Voxel size around \SI{0.5}{\milli\meter}
-				\end{itemize}
-				\item<2-> Lab/Desktop CT
-				\begin{itemize}
-					\item Voxel size around \SI{7}{\micro\meter} (\emph{in vivo}) or \SI{0.5}{\micro\meter} (\emph{ex vivo})
-				\end{itemize}
-				\item<4-> Synchrotron CT
-				\begin{itemize}
-					\item Voxel size down to \href{https://www.psi.ch/en/sls/tomcat/detectors}{\SI{160}{\nano\meter}}
-				\end{itemize}
-			\end{itemize}
-		\end{column}
-		\begin{column}{0.6\linewidth}
-			\centering
-			\includegraphics<1>[height=\imheight]{./images/24324062640_751e011e1a_o}%
-			\only<1>{\source{flic.kr/p/D4rbom}{\ccbyncsa}}
-			\includegraphics<2>[width=\imwidth]{./images/2214}%
-			\only<2>{\source{bruker.com/skyscan2214}{}}
-			\includegraphics<3>[width=\imwidth]{./images/1272}%
-			\only<3>{\source{bruker.com/skyscan1272}{}}
-			\includegraphics<4>[width=\imwidth]{./images/4563733710_f632792416_b}%
-			\only<4>{\source{flic.kr/p/7Xhk2Y}{\ccbync}}
-		\end{column}
-	\end{columns}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Computed tomography}
-	No matter what kind of machine, the basic principle is always the same
-	\begin{itemize}
-		\item an x-ray source
-		\item a sample
-		\item a detector
-	\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Computed tomography}
-	\begin{columns}
-		\begin{column}{0.49\linewidth}
-			\centering
-			\input{animations/classicCT}
-		\end{column}
-		\begin{column}{0.49\linewidth}
-			\centering
-			\only<1>{\input{animations/microCT}}%
-			\only<2>{\input{animations/microCT_lr}}%
-			\only<3>{\input{animations/microCT_hr}}%
-		\end{column}
-	\end{columns}
-\end{frame}
-
-%\begin{frame}
-%	\frametitle{What is happening?}
-%	\centering
-%	\includegraphics[height=\imheight]{./images/3D_Computed_Tomography}
-%	\source{w.wiki/7g3}{\ccbysa}
-%\end{frame}
 
 \subsection{Examples}
 \begin{frame}
@@ -724,7 +624,7 @@
 		}		
 \end{frame}
 
-\section{\emph{Take to lunch}-message}
+\section{\emph{Take home}-message}
 \begin{frame}
 	\frametitle{Conclusion}
 	\begin{itemize}
@@ -755,7 +655,9 @@
 		\end{column}
 		\begin{column}{0.5\linewidth}
 			\centering
-			\includegraphics<1->[height=\imheight]{./images/team}
+			\includegraphics<1>[height=\imheight]{./images/kopf_dh}
+			\includegraphics<2>[height=\imheight]{./images/kopf_rh}
+			\includegraphics<3>[height=\imheight]{./images/wolf_thomas_Web}
 		\end{column}
 	\end{columns}
 	\only<4>{%
@@ -783,12 +685,12 @@
 			\begin{itemize}
 				\item This \textsc{beamer} presentation was crafted in \LaTeX\xspace with the (slightly adapted) \href{http://intern.unibe.ch/dienstleistungen/corporate_design_und_vorlagen/praesentationen/index_ger.html}{template from \emph{Corporate Design und Vorlagen} of the University of Bern}.
 				\begin{itemize}
-					\item \href{https://github.com/habi/20201112_Anatomie_Seminar}{Fully reproducible source: git.io/JkJ5w}
+					\item \href{https://github.com/habi/Talk.2021.ToScA}{Complete source available at git.io/J0tjG}
 				\end{itemize}
 				\item Did you spot an error?
 				\begin{itemize}
-					\item \href{https://github.com/habi/20201112_Anatomie_Seminar/issues}{File an issue: git.io/JkJ5K}
-					\item \href{mailto:haberthuer@ana.unibe.ch?subject=Error\%20in\%20the\%20seminar\%20presentation\&body=https://xkcd.com/386/}{Send me an email: haberthuer@ana.unibe.ch}
+					\item \href{https://github.com/habi/Talk.2021.ToScA/issues}{File an issue: git.io/J0tj7}
+					\item \href{mailto:haberthuer@ana.unibe.ch?subject=Error\%20in\%20the\%20ToScA\%20presentation\&body=https://xkcd.com/386/}{Send me an email: haberthuer@ana.unibe.ch}
 				\end{itemize}
 			\end{itemize}
 		\end{column}
